Views refactored (closes #28), exercise parameters refactored and profiles added (closes #26), code formatted (closes #29) and added more information to POST on devices route #25

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,12 +6,12 @@
     background-color: rgb(38, 166, 154);
 }
 
-header, main, footer {
+header, main {
     padding-left: 300px;
 }
 
 @media only screen and (max-width : 992px) {
-    header, main, footer {
+    header, main {
         padding-left: 0;
     }
 }
