--- a/src/views/dashboard/exercises.pug
+++ b/src/views/dashboard/exercises.pug
@@ -1,13 +1,15 @@
 extends dashboard.pug
 
 block dashboard-content
-    <div id="dashboard-card" class="card">
-        <div id="dashboard-card-content" class="card-content">
+    <div id="exercises-card" class="card">
+        <div id="exercises-card-content" class="card-content">
             <div class="card-title center">Ejercicios</div>
             <div class="row">
             each exercise in exercises
-                include ../partials/exercise
-                +exercise(exercise)
+                <div class="col s12 m6 l4 xl3">
+                    include ../partials/exercise
+                    +exercise(exercise)
+                </div>
             </div>
         </div>
     </div>
