Cleaned up exercise schema #26, extended results route #30, tested devices form POST #25 and added some minor adjustments and reorganization

--- a/src/views/components/device.pug
+++ b/src/views/components/device.pug
@@ -12,6 +12,6 @@ mixin device(device, patients, exercises)
                     </div>
                 </div>
             else
-                include ../partials/device_form
+                include ../components/device_form
         </div>
     </div>
