--- a/src/views/components/panel.pug
+++ b/src/views/components/panel.pug
@@ -13,6 +13,7 @@
         <li><a class="waves-effect" href="devices"><i class="material-icons">devices</i>Dispositivos</a></li>
         <li><a class="waves-effect" href="patients"><i class="material-icons">people</i>Pacientes</a></li>
         <li><a class="waves-effect" href="exercises"><i class="material-icons">mode_edit</i>Ejercicios</a></li>
+        <li><a class="waves-effect" href="results"><i class="material-icons">receipt</i>Resultados</a></li>
         <li><div class="divider"></div></li>
         <li><a href="/logout"><i class="material-icons left">exit_to_app</i>Salir</a></li>
     </ul>
