--- a/src/views/dashboard/dashboard.pug
+++ b/src/views/dashboard/dashboard.pug
@@ -2,7 +2,7 @@ extends ../layout.pug
 
 block content
 
-    include ../partials/panel
+    include ../components/panel
     
     <main>
         <nav class="topbar">
