--- a/src/views/dashboard/exercises.pug
+++ b/src/views/dashboard/exercises.pug
@@ -7,7 +7,7 @@ block dashboard-content
             <div class="row">
             each exercise in exercises
                 <div class="col s12 m6 l4 xl3">
-                    include ../partials/exercise
+                    include ../components/exercise
                     +exercise(exercise)
                 </div>
             </div>
