--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content
 
-    include partials/header
+    include components/header
 
     <div id="login-page" class="row container">
         <h2 class="header center orange-text">Ingresar</h2>
