--- a/src/views/dashboard/patients.pug
+++ b/src/views/dashboard/patients.pug
@@ -7,7 +7,7 @@ block dashboard-content
             <div class="row">
             each patient_data in patients
                 <div class="col s12 m6 l4 xl3">
-                    include ../partials/patient
+                    include ../components/patient
                     +patient(patient_data)
                 </div>
             </div>
