--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content
 
-    include partials/header
+    include components/header
 
     <div id="register-page" class="row container">
         <h2 class="header center orange-text">Registro</h2>
