--- a/src/views/sections/exercises_sample.pug
+++ b/src/views/sections/exercises_sample.pug
@@ -6,7 +6,7 @@
 <div class="row">
     each exercise in exercises
         <div class="col s12 m6 l4 xl4">
-            include ../partials/exercise
+            include ../components/exercise
             +exercise(exercise)
         </div>
 </div>
