#23: Google and Facebook Authentication implemented using Passport.js

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -28,10 +28,10 @@ block content
                     </div>
                 </form>
                 <div class="row center">
-                    <a class="orange accent-4 waves-effect waves-light btn"><i class="fab fa-google left"></i>Ingresar con Google</a>
+                    <a class="orange accent-4 waves-effect waves-light btn" href="/login/google"><i class="fab fa-google left"></i>Ingresar con Google</a>
                 </div>
                 <div class="row center">
-                    <a class="light-blue darken-4 waves-effect waves-light btn"><i class="fab fa-facebook left"></i>Ingresar con Facebook</a>
+                    <a class="light-blue darken-4 waves-effect waves-light btn" href="/login/facebook"><i class="fab fa-facebook left"></i>Ingresar con Facebook</a>     
                 </div>
                 <div class="row center">
                     <p class="margin medium-small"><a href="#">¿Olvidaste tu contraseña?</a></p>
