Field password changed to be not required obligatory in user model. Also, when someone uses Google auth, a new user is created if its email (instead of its googleId) is not found in the database. #38: Sessions now managed using Passport.js along with express-session

--- a/src/views/dashboard/home.pug
+++ b/src/views/dashboard/home.pug
@@ -3,6 +3,6 @@ extends dashboard.pug
 block dashboard-content
     <div id="home-card" class="card">
         <div id="home-card-content" class="card-content">
-            <div class="card-title center">¡Bienvenido, #{user.name}!</div>
+            <div class="card-title center">¡Bienvenido, #{user.username}!</div>
         </div>
     </div>
