--- a/src/views/components/panel.pug
+++ b/src/views/components/panel.pug
@@ -4,7 +4,7 @@
             <div class="user-view">
                 <div class="background"><img src="/images/user_background.jpg"></div>
                 <a href="#user"><img class="circle" src="/images/default_user_pic.jpg"></a>
-                <a href="#name"><span class="white-text name">#{user.username}</span></a>
+                <a href="#name"><span class="white-text name">#{user.name}</span></a>
                 <a href="#email"><span class="white-text email">#{user.email}</span></a>
             </div>
         </li>
