--- a/src/views/sections/banner.pug
+++ b/src/views/sections/banner.pug
@@ -3,5 +3,5 @@
     <h5 class="header col s12 light">Automatización de ejercicios con realidad virtual para personas con daño cerebral adquirido</h5>
 </div>
 <div class="row center">
-    <a href="/login" class="btn-large waves-effect waves-light blue">Ingresar</a>
+    <a href="/login/google" class="btn-large waves-effect waves-light orange darken-3"><i class="fab fa-google left"></i>Ingresar</a>
 </div>
