#18: Dashboard routes fixed

--- a/src/views/components/panel.pug
+++ b/src/views/components/panel.pug
@@ -8,12 +8,12 @@
                 <a href="#email"><span class="white-text email">#{user.email}</span></a>
             </div>
         </li>
-        <li><a class="waves-effect" href="profile"><i class="material-icons">account_box</i>Perfil</a></li>
+        <li><a class="waves-effect" href="/dashboard/profile"><i class="material-icons">account_box</i>Perfil</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="devices"><i class="material-icons">devices</i>Dispositivos</a></li>
-        <li><a class="waves-effect" href="patients"><i class="material-icons">people</i>Pacientes</a></li>
-        <li><a class="waves-effect" href="exercises"><i class="material-icons">mode_edit</i>Ejercicios</a></li>
-        <li><a class="waves-effect" href="results"><i class="material-icons">receipt</i>Resultados</a></li>
+        <li><a class="waves-effect" href="/dashboard/devices"><i class="material-icons">devices</i>Dispositivos</a></li>
+        <li><a class="waves-effect" href="/dashboard/patients"><i class="material-icons">people</i>Pacientes</a></li>
+        <li><a class="waves-effect" href="/dashboard/exercises"><i class="material-icons">mode_edit</i>Ejercicios</a></li>
+        <li><a class="waves-effect" href="/dashboard/results"><i class="material-icons">receipt</i>Resultados</a></li>
         <li><div class="divider"></div></li>
         <li><a href="/logout"><i class="material-icons left">exit_to_app</i>Salir</a></li>
     </ul>
