Results route finished (closes #30), exercises launch for devices finished (closes #25) and some minor improvements in db models)

--- a/src/views/components/device.pug
+++ b/src/views/components/device.pug
@@ -5,7 +5,7 @@ mixin device(device, patients, exercises)
         </div>
         <div class="card-content">
             <span class="card-title center">#{device.account}<a href="#"></a></span>
-            if device.exercise
+            if device.executing
                 <div class="section">
                     <div class="progress">
                         <div class="indeterminate"></div>
