Resolves #31: Various javascript have been created to initialize different Materialize javascript components. They are used in the views which require them

--- a/src/views/dashboard/dashboard.pug
+++ b/src/views/dashboard/dashboard.pug
@@ -16,5 +16,7 @@ block content
             block dashboard-content
         </div>
     </main>
+    <script src="/js/materialize_init_navs.js"></script>
+    
 
     
