--- a/src/views/dashboard/profile.pug
+++ b/src/views/dashboard/profile.pug
@@ -52,3 +52,4 @@ block dashboard-content
             </form>
         </div>
     </div>
+    <script src="/js/materialize_init_selects.js"></script>
