--- a/src/views/dashboard/results.pug
+++ b/src/views/dashboard/results.pug
@@ -36,3 +36,4 @@ block dashboard-content
             </div>
         </div>
     </div>
+    <script src="/js/materialize_init_collapsibles.js"></script>
