--- a/src/views/sections/personalization.pug
+++ b/src/views/sections/personalization.pug
@@ -29,3 +29,4 @@ mixin personalization(exercise)
             +exercise(exercise)
         </div>
     </div>
+    <script src="/js/materialize_init_tabs.js"></script>
